--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ body{
 
             <div id="results" class="row menu-container box-shadow " data-aos="fade-up" data-aos-delay="200">
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/lobster-roll.jpg" class="menu-img largeimg" alt="">
+                    <img src="lobster-roll.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: red;font-size: 15px;bottom:2px;margin-left:10px;"></i>
                     <!--i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i-->
                     <div class="menu-content">
@@ -168,7 +168,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/spinach-salad.jpg" class="menu-img largeimg" alt="">
+                    <img src="spinach-salad.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: red;font-size: 15px;bottom:2px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);"> CHICKEN  SHASHLIK </span> <span
@@ -185,7 +185,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/mozzarella.jpg" class="menu-img largeimg" alt="">
+                    <img src="mozzarella.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -202,7 +202,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/mozzarella.jpg" class="menu-img largeimg" alt="">
+                    <img src="mozzarella.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -219,7 +219,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/mozzarella.jpg" class="menu-img largeimg" alt="">
+                    <img src="mozzarella.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -236,7 +236,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="/assets/img/menu/mozzarella.jpg" class="menu-img largeimg" alt="">
+                    <img src="mozzarella.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -897,12 +897,12 @@ body{
 
 
             <div>
-                <a href="https://wa.link/3unt79" target="_blank"> <img src="/assets/img/wa1.png" id="wa"
+                <a href="https://wa.link/3unt79" target="_blank"> <img src="wa1.png" id="wa"
                         style="z-index: 9" alt=""></a>
 
             </div>
             <div>
-                <a href="tel:+917306191467"> <img src="/assets/img/call.png" id="phone" style="z-index: 9" alt=""></a>
+                <a href="tel:+917306191467"> <img src="call.png" id="phone" style="z-index: 9" alt=""></a>
 
             </div>
         </div>
