--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <style>
 :root {
-  --bg-color:#1c1f57;
-  --my-color:white;
-  --cat-color:orange ;
+  --bg-color:#FFFF00;
+  --my-color:black;
+  --cat-color:006400 ;
 
 }
 
@@ -70,7 +70,7 @@ body{
 #hero {
   width: 100%;
   height: 30vh;
-  background: url("hero.jpeg") top center;
+  background: url("hero.jpg") top center;
   filter: brightness(150%);
   background-size: cover;
   position: relative;
@@ -113,8 +113,8 @@ body{
         <div class="container position-relative text-left text-lg-start" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
                 <div class="col-lg-6 " style="margin-top: 15px;">
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;">Food for Thought</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;">Mumbai </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;">Ruchi Pure Veg.</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;">Near Petrol pump, Virar West </div>
                 </div>
 
             </div>
