--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ body{
         <div class="container position-relative text-left text-lg-start" data-aos="zoom-in" data-aos-delay="100">
             <div class="row">
                 <div class="col-lg-6 " style="margin-top: 15px;">
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;">Ruchi Pure Veg.</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;">Near Petrol pump, Virar West </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Ruchi Pure Veg.</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Near Petrol pump, Virar West </div>
                 </div>
 
             </div>
