--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body{
 
             <div id="results" class="row menu-container box-shadow " data-aos="fade-up" data-aos-delay="200">
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="lobster-roll.jpg" class="menu-img" alt="">
+                    <img src="lobster-roll.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: red;font-size: 15px;bottom:2px;margin-left:10px;"></i>
                     <!--i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i-->
                     <div class="menu-content">
@@ -171,7 +171,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="spinach-salad.jpg" class="menu-img " alt="">
+                    <img src="spinach-salad.jpg" class="menu-img largeimg" alt="">
                     <i class="bi bi-stop-btn" style="color: red;font-size: 15px;bottom:2px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);"> CHICKEN  SHASHLIK </span> <span
@@ -188,7 +188,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="mozzarella.jpg" class="menu-img " alt="">
+                    <img src="mozzarella.jpg" class="menu-img largeimg " alt="">
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -205,7 +205,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="mozzarella.jpg" class="menu-img" alt="">
+                   
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -222,7 +222,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="mozzarella.jpg" class="menu-img" alt="">
+
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
@@ -239,7 +239,7 @@ body{
 
                 </div>
                 <div class="col-lg-6 menu-item filter-starters imageContainer">
-                    <img src="mozzarella.jpg" class="menu-img" alt="">
+                   
                     <i class="bi bi-stop-btn" style="color: #00FF00;font-size: 15px;margin-left:10px;"></i>
                     <div class="menu-content">
                         <span style="background: var(--bg-color);color: var(--my-color);">GRILLED  VEG  SANDWICH </span> <span
