--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <style>
 :root {
-  --bg-color:yellow;
+  --bg-color:#CCFF00;
   --my-color:black;
-  --cat-color:maroon ;
+  --cat-color:#FF3300 ;
 }
 
 
@@ -113,8 +113,8 @@ body{
                 <div class="col-lg-6 " style="margin-top: 15px;">
 
 
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Ruchi Pure Veg.</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Near Petrol pump, Virar West </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Ashraya's Pure Veg.</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Pandarinath Chaudhary Marg, Virar East </div>
 
                 </div>
 
