--- a/menu.html
+++ b/menu.html
@@ -41,9 +41,9 @@
 </head>
 <style>
 :root {
-  --bg-color: gray;
+  --bg-color:#fede6f;
   --my-color:black;
-  --cat-color:orange ;
+  --cat-color:black ;
 }
 
 
@@ -113,8 +113,8 @@ body{
                 <div class="col-lg-6 " style="margin-top: 15px;">
 
 
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Food 4 ThoUght.</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Mumbai </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Ruchi's Bageecha.</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">JN Road, Near GG College, Vasai West </div>
 
                 </div>
 
