--- a/menu.html
+++ b/menu.html
@@ -68,7 +68,7 @@ body{
 #hero {
   width: 100%;
   height: 30vh;
-  background: url("hero-bg.jpeg") top center;
+  background: url("hero-bg.png") top center;
   filter: brightness(150%);
   background-size: cover;
   position: relative;
