--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ body{
 #hero {
   width: 100%;
   height: 30vh;
-  background: url("hero.png") top center;
+  background: url("hero.jpg") top center;
   filter: brightness(150%);
   background-size: cover;
   position: relative;
