--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 </head>
 <style>
 :root {
-  --bg-color:#fad807;
+  --bg-color:#FFFAFA;
   --my-color:black;
-  --cat-color:black ;
+  --cat-color:#FFA500 ;
 }
 
 
@@ -113,8 +113,8 @@ body{
                 <div class="col-lg-6 " style="margin-top: 15px;">
 
 
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">The Benchmark</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;"> Sativali Rd, Vasai East. </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">The Wings Restaurant</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;"> Dongarpada Road, Virar West. </div>
 
                 </div>
 
