--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
 </head>
 <style>
 :root {
-  --bg-color:#fede6f;
+  --bg-color:#d0c2a0;
   --my-color:black;
   --cat-color:black ;
 }
@@ -68,7 +68,7 @@ body{
 #hero {
   width: 100%;
   height: 30vh;
-  background: url("hero-bg.png") top center;
+  background: url("hero-bg.jpeg") top center;
   filter: brightness(150%);
   background-size: cover;
   position: relative;
@@ -113,8 +113,8 @@ body{
                 <div class="col-lg-6 " style="margin-top: 15px;">
 
 
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Ruchi's Bageecha.</span></h5>
-                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">JN Road, Near GG College, Vasai West </div>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Tipsy panda Asian Kitchen + Bar</span></h5>
+                    <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Emmanuel Tower, Babhola Road, Vasai West.  </div>
 
                 </div>
 
