--- a/menu.html
+++ b/menu.html
@@ -113,7 +113,7 @@ body{
                 <div class="col-lg-6 " style="margin-top: 15px;">
 
 
-                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Tipsy panda Asian Kitchen + Bar</span></h5>
+                    <h5> <span style="text-shadow: 2px 2px 4px #000000;color:white;">Tipsy Panda Asian Kitchen + Bar</span></h5>
                     <div style="text-shadow: 2px 2px 4px #000000; font-size: 10px;color:white;">Emmanuel Tower, Babhola Road, Vasai West.  </div>
 
                 </div>
